# video-summarizer

./: README.md  pyproject.toml
src/video_summarizer/: __main__.py  server.py  transcriber.py
