[project]
name = "video-summarizer"
version = "0.1.0"
description = "MCP server that transcribes videos for Claude Code summarization"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.7.1",
    "yt-dlp>=2024.12.0",
    "mlx-whisper>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
